<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_margin="20dp"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dailyScripturesHeaderLabel"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dailyScripturesHeader"
            android:textSize="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/dailyScripturesDetailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dailyScripturesDetail"
            app:layout_constraintTop_toBottomOf="@id/dailyScripturesHeaderLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/verseOfTheDayHeaderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verseOfTheDayHeader"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/dailyScripturesDetailLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/verseOfTheDayDetailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verseOfTheDayDetail"
            app:layout_constraintTop_toBottomOf="@id/verseOfTheDayHeaderLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/studyGuideHeaderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/studyGuideHeader"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@id/verseOfTheDayDetailLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/studyGuideDetailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/studyGuideDetail"
            app:layout_constraintTop_toBottomOf="@id/studyGuideHeaderLabel"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>