<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/textLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verse_placeholder"
        android:textAlignment="textStart"
        android:textSize="18dp"
        android:textStyle="italic"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/referenceLabel"/>

    <TextView

        android:id="@+id/referenceLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reference_placeholder"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/translationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translation_placeholder"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/referenceLabel"
        app:layout_constraintStart_toStartOf="@id/referenceLabel"
        />


</androidx.constraintlayout.widget.ConstraintLayout>